DBC22-3329: Fixing overlap between Replay the day and image credit

--- a/src/frontend/src/Footer.scss
+++ b/src/frontend/src/Footer.scss
@@ -4,10 +4,6 @@
   margin-top: 3rem;
   background: $Grey10;
 
-  &.replayActive {
-    margin-top: 9rem;
-  }
-
   .landAcknowledgement {
     background-color: rgb(41, 41, 41);
     line-height: 21px;
